src-ken&y/objects/Allowance_Type__c.object
<CustomObject>
    <customHelpPage>HelpAllowanceType</customHelpPage>
    <fields>
        <fullName>Allow_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allowance_Class__c</fullName>
        <label>Allowance Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Freight</fullName>
                </value>
                <value>
                    <fullName>Discount</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Accrual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apply_At_Header__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply at Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Basis__c</fullName>
        <label>Basis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Rate By</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>Markup</fullName>
                </value>
                <value>
                    <fullName>Markdown</fullName>
                </value>
                <value>
                    <fullName>Multiplier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipName>Allowance_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Account</label>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Allowances</relationshipLabel>
        <relationshipName>Allowances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>One_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>One-Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ordered_Quantity__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A check mark indicates that you want to override default calculation, which is based on the shipped quantity, and use the ordered quantity for this type of rule.</inlineHelpText>
        <label>Ordered Quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Percent_Of_Target_Field__c</fullName>
        <label>% of Target Field</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rate_Field__c</fullName>
        <label>Rate Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quantity</fullName>
                </value>
                <value>
                    <fullName>Weight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Field__c</fullName>
        <label>Target Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Net</fullName>
                </value>
                <value>
                    <fullName>Gross</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Discount</fullName>
                </value>
                <value>
                    <fullName>Charge</fullName>
                </value>
                <value>
                    <fullName>Accrual</fullName>
                </value>
                <value>
                    <fullName>New Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <label>Allowance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Allowance_Class__c</columns>
        <columns>Manual__c</columns>
        <columns>One_Time__c</columns>
        <columns>Basis__c</columns>
        <columns>Target_Field__c</columns>
        <columns>Percent_Of_Target_Field__c</columns>
        <columns>Rate_Field__c</columns>
        <columns>Amount__c</columns>
        <columns>Currency__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Detailed</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Basis__c</columns>
        <columns>Rate_Field__c</columns>
        <columns>Amount__c</columns>
        <columns>Target_Field__c</columns>
        <columns>Percent_Of_Target_Field__c</columns>
        <columns>Apply_At_Header__c</columns>
        <columns>Manual__c</columns>
        <columns>Allow_Override__c</columns>
        <columns>One_Time__c</columns>
        <columns>Currency__c</columns>
        <columns>Allowance_Class__c</columns>
        <filterScope>Everything</filterScope>
        <label>Detailed</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Allowances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>